// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`after_export.js [acorn] format 1`] = `
"Unexpected character '@' (1:8)
> 1 | export @decorator class Foo {}
    |        ^
  2 |
  3 | export default @decorator class {}
  4 |
Cause: Unexpected character '@' (1:7)"
`;

exports[`after_export.js [espree] format 1`] = `
"Unexpected character '@' (1:8)
> 1 | export @decorator class Foo {}
    |        ^
  2 |
  3 | export default @decorator class {}
  4 |
Cause: Unexpected character '@'"
`;

exports[`after_export.js [meriyah] format 1`] = `
"Unexpected token: '@' (1:8)
> 1 | export @decorator class Foo {}
    |        ^
  2 |
  3 | export default @decorator class {}
  4 |
Cause: [1:8]: Unexpected token: '@'"
`;

exports[`after_export.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export @decorator class Foo {}

export default @decorator class {}

=====================================output=====================================
export
@decorator
class Foo {}

export default
@decorator
class {}

================================================================================
`;

exports[`before_export.js [acorn] format 1`] = `
"Unexpected character '@' (1:1)
> 1 | @decorator
    | ^
  2 | export class Foo {}
  3 |
  4 | @decorator
Cause: Unexpected character '@' (1:0)"
`;

exports[`before_export.js [espree] format 1`] = `
"Unexpected character '@' (1:1)
> 1 | @decorator
    | ^
  2 | export class Foo {}
  3 |
  4 | @decorator
Cause: Unexpected character '@'"
`;

exports[`before_export.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
@decorator
export class Foo {}

@decorator
export default class {}

=====================================output=====================================
@decorator
export class Foo {}

@decorator
export default class {}

================================================================================
`;
